WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216805
[PlayStation] Stop raising SIGPIPE when client side of RemoteInspector dies
https://bugs.webkit.org/show_bug.cgi?id=216805
Summary
[PlayStation] Stop raising SIGPIPE when client side of RemoteInspector dies
Basuke Suzuki
Reported
2020-09-21 14:52:11 PDT
We just handle that by socket read/write error. No need for signal.
Attachments
PATCH
(2.03 KB, patch)
2020-09-23 15:59 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2020-09-23 15:59:55 PDT
Created
attachment 409509
[details]
PATCH
EWS
Comment 2
2020-09-24 11:24:01 PDT
Committed
r267538
: <
https://trac.webkit.org/changeset/267538
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409509
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-24 11:26:33 PDT
<
rdar://problem/69515164
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug