[PlayStation] Stop raising SIGPIPE when client side of RemoteInspector dies https://bugs.webkit.org/show_bug.cgi?id=216805

Reviewed by Don Olmstead.

When communication is stopped caused by peer crash or non-polite close, SIGPIPE will be
raised on BSD (and maybe on Linux). We prefer to handle those events by returning error.

On Windows, there's no such fancy feature from the beginning.

* inspector/remote/socket/posix/RemoteInspectorSocketPOSIX.cpp:
(Inspector::Socket::read):
(Inspector::Socket::write):


Canonical link: https://commits.webkit.org/229720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267538 268f45cc-cd09-0410-ab3c-d52691b4dbfc